<resources>
    <string name="app_name">Feca</string>
    <string name="select_image">选择图片</string>
    <string name="take_photo">相机</string>
    <string name="pick_photo">选择图片</string>
    <string name="lipstick">口红试色</string>
    <string name="eye_shadow">眼影试色</string>
    <string name="foundation">粉底试色</string>
    <string name="blusher">腮红试色</string>
    <string name="eyebrow">眉笔试色</string>
    <string name="more">更多精彩</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="moment_title1">一入口红坑似海</string>
    <string name="moment_summary1">初入坑小白盲买不会错：15支口红真人试色推荐</string>
    <string name="moment_title2">平价替代品？</string>
    <string name="moment_summary2">平价口红能替代大牌？无PS多图告诉你真相！</string>
    <string name="moment_title3">如何给女朋友挑口红？</string>
    <string name="moment_summary3">情人节将至，为您送上直男福利~</string>
    <string name="moment_title4">#最美梳妆台#</string>
    <string name="moment_summary4">给你点color see see——17个sleek眼影盘测评</string>
    <string name="lipstick_test">口红试色</string>
    <string name="blusher_test">腮红试色</string>
    <string name="foundation_test">粉底试色</string>
    <string name="eyeshadow_test">眼影试色</string>
    <string name="eyebrow_pencil_test">眉笔试色</string>
    <string name="save">保存</string>
    <string name="buy">购买</string>
    <string name="no_permission">没有权限！</string>
    <string name="developing">本功能正在开发中..</string>
    <string name="detail">详情</string>
</resources>
