<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:weightSum="3">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/lipstick"
            android:layout_width="148dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:background="@xml/pick_photo_background"
            android:drawableTop="@mipmap/beauty"
            android:gravity="bottom"
            android:padding="16dp"
            android:text="@string/lipstick"
            android:textColor="#ffffff"
            android:textSize="14dp"/>

        <Button
            android:id="@+id/eye_shadow"
            android:layout_width="148dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:background="@xml/a"
            android:drawableTop="@mipmap/beauty"
            android:gravity="bottom"
            android:padding="16dp"
            android:text="@string/eye_shadow"
            android:textColor="#ffffff"
            android:textSize="14dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/foundation"
            android:layout_width="148dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:background="@xml/b"
            android:drawableTop="@mipmap/beauty"
            android:gravity="bottom"
            android:padding="16dp"
            android:text="@string/foundation"
            android:textColor="#ffffff"
            android:textSize="14dp"/>

        <Button
            android:id="@+id/blusher"
            android:layout_width="148dp"
            android:layout_height="100dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:background="@xml/c"
            android:drawableTop="@mipmap/beauty"
            android:gravity="bottom"
            android:padding="16dp"
            android:text="@string/blusher"
            android:textColor="#ffffff"
            android:textSize="14dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/eyebrow"
            android:layout_width="148dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:background="@xml/d"
            android:drawableTop="@mipmap/beauty"
            android:gravity="bottom"
            android:padding="16dp"
            android:text="@string/eyebrow"
            android:textColor="#ffffff"
            android:textSize="14dp"/>

        <Button
            android:id="@+id/more"
            android:layout_width="148dp"
            android:layout_height="100dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="20dp"
            android:background="@xml/e"
            android:drawableTop="@mipmap/beauty"
            android:gravity="bottom"
            android:padding="16dp"
            android:text="@string/more"
            android:textColor="#ffffff"
            android:textSize="14dp"/>

    </RelativeLayout>

</LinearLayout>